--- a/xintra/lists/ism_list.html
+++ b/xintra/lists/ism_list.html
@@ -1,7 +1,7 @@
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for topics..">
 <ul id="myUL">
   <li><a href="#" class="header">Development process</a></li>
-  <li><a href="#">Extreme Programming</a></li>
+  <li><a href="result.html">Extreme Programming</a></li>
   <li><a href="#">SELECT Perspective approach</a></li>
   <li><a href="#">White-box reuse approach</a></li>
   <li><a href="#">Black-box reuse approach</a></li>
