--- a/xintra/index.html
+++ b/xintra/index.html
@@ -5,11 +5,11 @@
 	<meta charset="UTF-8">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<script src="js/script.js" type="text/javascript"></script>
+	<script src="js/index.js" type="text/javascript"></script>
 </head>
 <body>
 	<header> 
-	<h1>Xintra (v0.1)</h1>
+	<h1><a href="index.html">Xintra (v0.1)</a></h1>
 	</header>
 	<section>
 		<select id = "module">
