--- a/xintra/result.html
+++ b/xintra/result.html
@@ -11,13 +11,12 @@
 </head>
 <body>
 	<header> 
-	<h1>Xintra (v0.1)</h1>
+	<h1><a href="index.html">Xintra (v0.1)</a></h1>
 	</header>
 	<section>
 		<div id ="topic_name">
 		</div>
 		<div id="pdf_holder">
-			
 		</div>
 		
 		<div id ="info">
