--- a/xintra/index.html
+++ b/xintra/index.html
@@ -14,12 +14,19 @@
 	<section>
 		<select id = "module">
 			<option disabled selected value>Select an option</option>
-			<option value="ism_list">Information Systems Management</option>
-			<option value="pic_list">Professional Issues In Computing </option>
+			<option value="ism">Information Systems Management</option>
+			<option value="pic">Professional Issues In Computing </option>
 		</select>
 	
 		<div id="search">
+			<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for topics..">
+			<ul id="myUL">
+			
+			</ul>
+		</div>
 		
+		<div id ="info">
+			
 		</div>
 	</section>
 	<footer>
