--- a/xintra/index.html
+++ b/xintra/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>xintra ISM search(test)</title>
+	<title>xintra</title>
 	<meta charset="UTF-8">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<header> 
-	<h1><a href="index.html">Xintra (v0.1)</a></h1>
+	<h1><a href="index.html">Xintra (v0.3)</a></h1>
 	</header>
 	<section>
 		<select id = "module">
