--- a/xintra/predict.html
+++ b/xintra/predict.html
@@ -3,25 +3,19 @@
 <head>
 	<title>xintra</title>
 	<meta charset="UTF-8">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<script src="js/PDFObject/pdfobject.js" type="text/javascript"></script>
-	<script src = "js/results_.js" type="text/javascript"></script>
+	<script src="js/predict.js" type="text/javascript"></script>
 </head>
 <body>
 	<header> 
 	<h1><a href="index.html">Xintra (v0.3)</a></h1>
 	</header>
 	<section>
-		<div id ="topic_name">
-		</div>
-		<div id="pdf_holder">
-		</div>
 		
 		<div id ="info">
 			
 		</div>
-		
 	</section>
 	<footer>
 	</footer>
