--- a/xintra/about.html
+++ b/xintra/about.html
@@ -5,19 +5,33 @@
 	<meta charset="UTF-8">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<script src="js/index.js" type="text/javascript"></script>
+	<script src="scripts/index.js" type="text/javascript"></script>
 </head>
-<body>
-	<header> 
-	<h1><a href="index.html">Xintra (v0.3)</a></h1>
-	</header>
-	<section>
-		<div id ="info">
-			<p>GitHub repository:<a href = "https://github.com/AlexEmerton/xintra"> here</a></p>
-			<p>Contact me: <a href = "mailto:djumaev.anvar@gmail.com"> here</a></p> 
+<body id = "container">
+	<div id="navBar">
+			<span class="titleItem">
+			Xintra (v0.3)
+			</span>
+			<span class="navItem">
+			<a class = "navBarItem" href ="index.html">
+			Home
+			</a>
+			</span>
+			<span class="navItem">
+			<a class = "navBarItem" href ="about.html">
+			About me
+			</a>
+			</span>
 		</div>
-	</section>
-	<footer>
-	</footer>
+		<div id = "about_info">
+			<p>Early build (0.3)</p>
+			<p>GitHub repository: <a href = "https://github.com/AlexEmerton/xintra">here</a></p>
+			<p>Contact me: <a href = "mailto:djumaev.anvar@gmail.com"> here</a></p> 
+			<p>Libraries used: 
+				<ul>
+					<li><a href = "https://pdfobject.com/">PDF-Object</a></li>
+				</ul>
+			</p>
+		</div>
 </body>
 </html>
