--- a/xintra/index.html
+++ b/xintra/index.html
@@ -5,32 +5,46 @@
 	<meta charset="UTF-8">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<script src="js/index.js" type="text/javascript"></script>
+	<script src="scripts/index.js" type="text/javascript"></script>
 </head>
-<body>
-	<header> 
-	<h1><a href="index.html">Xintra (v0.3)</a></h1>
-	</header>
-	<section>
-		<select id = "module">
-			<option disabled selected value>Select an option</option>
-			<option value="ism">Information Systems Management</option>
-			<option value="pic">Professional Issues In Computing </option>
-		</select>
-	
-		<div id="search">
-			<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for topics..">
-			<ul id="myUL">
-			
-			</ul>
+	<body id="container">	
+		<div id="navBar">
+			<span class="titleItem">
+			Xintra (v0.3)
+			</span>
+			<span class="navItem">
+			<a class = "navBarItem" href ="index.html">
+			Home
+			</a>
+			</span>
+			<span class="navItem">
+			<a class = "navBarItem" href ="about.html">
+			About me
+			</a>
+			</span>
 		</div>
+		<section>
+			<select id = "module">
+				<option disabled selected value>Select an option</option>
+				<option value="ism">Information Systems Management</option>
+				<option value="pic">Professional Issues In Computing </option>
+			</select>
 		
-		<div id ="info">
+			<div id="search">
+				
+			</div>
 			
-		</div>
-	</section>
-	<footer>
-	<p><a href="about.html">About me</a></p>
-	</footer>
-</body>
+			<div id ="info">
+				
+			</div>
+		</section>
+		
+		<!-- <div id="footer">
+			<div id="footerinfo">
+				Xintra  
+				<a href="mailto:djumaev.anvar@gmail.com">djumaev.anvar@gmail.com</a>
+			</div>
+		</div> -->
+		
+	</body>
 </html>
