--- a/xintra/result.html
+++ b/xintra/result.html
@@ -5,23 +5,35 @@
 	<meta charset="UTF-8">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<script src="js/PDFObject/pdfobject.js" type="text/javascript"></script>
-	<script src = "js/results_.js" type="text/javascript"></script>
+	<script src="scripts/PDFObject/pdfobject.js" type="text/javascript"></script>
+	<script src = "scripts/results_.js" type="text/javascript"></script>
 </head>
-<body>
-	<header> 
-	<h1><a href="index.html">Xintra (v0.3)</a></h1>
-	</header>
+<body id = "container">
+		<div id="navBar">
+		<span class="titleItem">
+		Xintra (v0.3)
+		</span>
+		<span class="navItem">
+		<a class = "navBarItem" href ="index.html">
+		Home
+		</a>
+		</span>
+		<span class="navItem">
+		<a class = "navBarItem" href ="about.html">
+		About me
+		</a>
+		</span>
+	</div>
+	
 	<section>
 		<div id ="topic_name">
 		</div>
+	
 		<div id="pdf_holder">
 		</div>
 		
 		<div id ="info">
-			
 		</div>
-		
 	</section>
 	<footer>
 	</footer>
